syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.tabalt.ipqueryd.pb";
option java_outer_classname = "IpQueryProto";

package pb;

service IpQuery {

    // find out ip query result
    rpc Find(FindParams) returns (FindResult) {}

}

message FindParams {
    string ip = 1;
}

message FindResult {
    repeated string data = 1;
}

